# sevenday

./: ~$遇见你prd.docx  专交遇见你prd.docx
zq_match_backend_transfer/: .env.example  .gitignore  API_MISMATCH_REPORT.md  DELIVERABLES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  GIT_COMMIT_GUIDE.md  OPTIMIZATION_SUMMARY.md  QQ_LOGIN_README.md  README.md  TRANSFER.md  UNIFIED_EMAIL_LOGIN_SUMMARY.md  WHU_EMAIL_LOGIN_SUMMARY.md  check_deployment.py  clear_database.py  deploy_qq_login.sh  deploy_script.sh  docker-compose.yml  pyproject.toml  requirements.txt  view_database.py
zq_match_backend_transfer/.github/workflows/: ci.yml
zq_match_backend_transfer/docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  DEPLOYMENT.md  EMAIL_CONFIG.md  FEATURES_AND_MILESTONES.md  FEATURE_IMPROVEMENTS.md  FINAL_SUMMARY.md  GIT_PUSH_INSTRUCTIONS.md  IMPORT_ACADEMIES.md  INTEGRATION_GUIDE.md  LOCAL_ADMIN.md  PROJECT_SUMMARY.md
zq_match_backend_transfer/reports/: choices_usage_report.md
zq_match_backend_transfer/scripts/: check_admin.py  compare_academies.py  import_academies.py  import_flat_academies.py  package_transfer.ps1  smoke_test.py  test_advanced_features.py  test_enhanced_features.py  test_post_features.py  test_self_match.py
zq_match_backend_transfer/server/: asgi.py  urls.py  wsgi.py
zq_match_backend_transfer/server/fixtures/: academies_2025.json
zq_match_backend_transfer/server/middleware/: operation_log.py
zq_match_backend_transfer/server/settings/: __init__.py  util.py
zq_match_backend_transfer/server/utils/: cache.py  choices.py  ecs_credentials.py  images.py  (+2 more)
(+124 files in other folders)
