[tool.poetry]
name = "zq-match-backend"
version = "0.1.0"
description = ""
authors = ["wisdomgo <1246045735@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-redis = "^5.3.0"
django-cache-url = "^3.4.4"
loguru = "^0.7.0"
dj-database-url = "^2.1.0"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
python-decouple = "^3.8"
django-cors-headers = "^4.2.0"
rest-framework-simplejwt = "^0.0.2"
zq-django-util = "^0.1.5"
django-filter = "^23.2"
drf-spectacular = "^0.26.5"
django-extensions = "^3.2.3"
zq-auth-sdk = "^0.1.0"
sqlparse = "^0.4.4"
wechatpy = "^1.8.18"
drf-extensions = "^0.7.1"
django-method-override = "^1.0.4"
mysqlclient = "^2.2.0"
django-simpleui = "^2023.11.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
